--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "ajax": "^0.0.4",
     "debug": "~3.2.7",
     "dotenv": "^6.2.0",
     "ejs": "^3.1.8",
