--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http": "^0.0.1-security",
     "http-errors": "~1.8.1",
     "mongodb": "6.10",
+    "mongoose": "^8.9.5",
     "morgan": "~1.10.0",
     "path": "^0.12.7"
   },
